--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,9 @@
 .footer{
     width: 100%;
-    position: absolute;
+    /* position: absolute; */
     background-color: lawngreen;
     bottom: 0;
     left: 0;
     position: fixed;
-    margin-top: 100px;
+    margin-top: 400px;
 }
